refactor(updated docs): updated docs
updated docs

--- a/documentation/coverage.html
+++ b/documentation/coverage.html
@@ -163,10 +163,22 @@
         <tr class="low">
             <td>
                 <!-- miscellaneous -->
-                <a href="./classes/ServerExceptionFilter.html">src/exceptions/filters/server-exception.filter.ts</a>
+                <a href=".//functions.html#init">src/config/middleware.ts</a>
+            </td>
+            <td>function</td>
+            <td>init</td>
+            <td align="right" data-sort="0">
+                <span class="coverage-percent">0 %</span>
+                <span class="coverage-count">(0/1)</span>
+            </td>
+        </tr>
+        <tr class="low">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./classes/AllExceptionsFilter.html">src/exceptions/filters/all-exceptions.filter.ts</a>
             </td>
             <td>class</td>
-            <td>ServerExceptionFilter</td>
+            <td>AllExceptionsFilter</td>
             <td align="right" data-sort="0">
                 <span class="coverage-percent">0 %</span>
                 <span class="coverage-count">(0/2)</span>
