--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -68,7 +68,7 @@
         <li>
             <b>express</b> : 4.17.1</li>
         <li>
-            <b>helmet</b> : ^3.22.0</li>
+            <b>helmet</b> : 3.22.0</li>
         <li>
             <b>mongoose</b> : 5.9.7</li>
         <li>
